Fixes to INSPIRE profile sample files

--- a/data_dir/csw/FC_FeatureCatalogue.properties
+++ b/data_dir/csw/FC_FeatureCatalogue.properties
@@ -1,6 +1,6 @@
 @@uuid="metadata.custom.feature-catalog/feature-catalog-identifier"
 
-$name.CharacterString=concatenate(if_then_else(isNull("title"), "name", "title"), ' (objectencatalogus)')
+$name.CharacterString=concatenate(if_then_else(isNull("title"), "name", "title"), ' (feature catalogue)')
 
 $scope.CharacterString=if_then_else(isNull("metadata.custom.topic-category[0]"), 'geoscientificInformation', "metadata.custom.topic-category")
 
