--- a/data_dir/metadata/metadata.properties
+++ b/data_dir/metadata/metadata.properties
@@ -31,6 +31,7 @@ metadata.generated.form.email=E-mail *
 metadata.generated.form.telephone=Telephone
 metadata.generated.form.website=Website *
 metadata.generated.form.organisation=Organisation name *
+metadata.generated.form.individual=Individual name *
 metadata.generated.form.contactinfo=Contact information
 metadata.generated.form.role=Role *
 metadata.generated.form.date=Date *
@@ -88,15 +89,13 @@ metadata.generated.form.feature-type-definition=Feature type definition
 metadata.generated.form.feature-attribute=Feature attributes
 
 # Dropdown values
-metadata.generated.form.metadata-language-code.dut=Dutch
 metadata.generated.form.metadata-language-code.eng=English
 metadata.generated.form.metadata-language-code.fre=French
-metadata.generated.form.metadata-language-code.ger=German
+metadata.generated.form.metadata-language-code.spa=Spanish
 
-metadata.generated.form.data-language-code.dut=Dutch
 metadata.generated.form.data-language-code.eng=English
 metadata.generated.form.data-language-code.fre=French
-metadata.generated.form.data-language-code.ger=German
+metadata.generated.form.data-language-code.spa=Spanish
 
 metadata.generated.form.topic-category.farming=Farming
 metadata.generated.form.topic-category.biota=Biota
