--- a/data_dir/metadata/metadata-mapping.yaml
+++ b/data_dir/metadata/metadata-mapping.yaml
@@ -49,6 +49,8 @@ geonetworkmapping:
     geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:resourceConstraints/gmd:MD_LegalConstraints/gmd:accessConstraints/gmd:MD_RestrictionCode/@codeListValue
   - geoserver: rc-lim-other-constraint-label
     geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:resourceConstraints/gmd:MD_LegalConstraints[gmd:accessConstraints]/gmd:otherConstraints/gmx:Anchor/text()
+  - geoserver: rc-lim-other-constraint-ref
+    geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:resourceConstraints/gmd:MD_LegalConstraints[gmd:accessConstraints]/gmd:otherConstraints/gmx:Anchor/@xlink:href
   - geoserver: rc-con-use-constraint
     geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:resourceConstraints/gmd:MD_LegalConstraints/gmd:useConstraints/gmd:MD_RestrictionCode/@codeListValue
   - geoserver: rc-con-other-constraint
@@ -68,11 +70,11 @@ geonetworkmapping:
   - geoserver: transfer-option
     geonetwork: //gmd:distributionInfo/gmd:MD_Distribution/gmd:transferOptions/gmd:MD_DigitalTransferOptions/gmd:onLine[gmd:CI_OnlineResource/gmd:protocol/gco:CharacterString="WWW:DOWNLOAD-1.0-http--download" or gmd:CI_OnlineResource/gmd:protocol/gco:CharacterString="WWW:LINK-1.0-http--related" or gmd:CI_OnlineResource/gmd:protocol/gco:CharacterString="LINK download-store"]
   - geoserver: keyword-inspire-theme-label
-    geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:descriptiveKeywords/gmd:MD_Keywords[gmd:thesaurusName/gmd:CI_Citation/gmd:title/gco:CharacterString="GEMET - INSPIRE thema's, versie 1.0"]/gmd:keyword/gco:CharacterString/text()
-  - geoserver: keyword-inspire-theme-label
+    geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:descriptiveKeywords/gmd:MD_Keywords[gmd:thesaurusName/gmd:CI_Citation/gmd:title/gco:CharacterString="GEMET - INSPIRE theme, version 1.0"]/gmd:keyword/gco:CharacterString/text()
+  - geoserver: keyword-inspire-theme-ref
     geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:descriptiveKeywords/gmd:MD_Keywords[gmd:thesaurusName/gmd:CI_Citation/gmd:title/gmx:Anchor="GEMET - INSPIRE themes, version 1.0"]/gmd:keyword/gmx:Anchor/text()
   - geoserver: keyword-gemet-concept
-    geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:descriptiveKeywords/gmd:MD_Keywords[gmd:thesaurusName/gmd:CI_Citation/gmd:title/gco:CharacterString="GEMET - Concepten, versie 2.4"]/gmd:keyword/gco:CharacterString/text()
+    geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:descriptiveKeywords/gmd:MD_Keywords[gmd:thesaurusName/gmd:CI_Citation/gmd:title/gco:CharacterString="GEMET - Conces, version 2.4"]/gmd:keyword/gco:CharacterString/text()
   - geoserver: keyword-free
     geonetwork: //gmd:identificationInfo/gmd:MD_DataIdentification/gmd:descriptiveKeywords/gmd:MD_Keywords[not(gmd:thesaurusName) or gmd:thesaurusName/gmd:CI_Citation/gmd:title/gco:CharacterString[contains(., 'DOV')]]/gmd:keyword/gco:CharacterString/text()
 
@@ -81,6 +83,8 @@ objectmapping:
     mapping:
       - geoserver: organisation
         geonetwork: .//gmd:CI_ResponsibleParty/gmd:organisationName/gco:CharacterString/text()
+      - geoserver: individual
+        geonetwork: .//gmd:CI_ResponsibleParty/gmd:individualName/gco:CharacterString/text()
       - geoserver: contactinfo
         geonetwork: .//gmd:CI_ResponsibleParty/gmd:contactInfo
       - geoserver: role
